Finished my website

--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Joseph Nwosibe</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <div class="container">
+        <div class="profile-section">
+            <img src="https://i.kym-cdn.com/photos/images/newsfeed/001/150/263/761.png" alt="Joseph Nwosibe" class="profile-image">
+            <h1>Joseph Nwosibe</h1>
+        </div>
+        <p>Welcome to my personal webpage!</p>
+        <h3>Education</h3>
+        <p>University of California, Berkeley (2021 - 2025)</p>
+        <h3>Experience</h3>
+        <p>Interned at Joint Bioenergy Institute as a lab tech (Jun 2019 - Aug 2019)</p>
+        <h3>Connect with me</h3>
+        <p><a href="https://github.com/toben67" target="_blank">My GitHub Profile</a></p>
+    </div>
+</body>
+</html>
